tests/cases/errors_typecheck/test3.qz
fun main() {
    return struct {
        x: 10,
        y: "foo",
        z: true,
    };
}
